--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
     </div>
 
     <div class="passwordSizeDiv">
-        <label for="inputPasswordSize">Tamanho de senha</label>
+        <label for="inputPasswordSize">Tamanho da senha</label>
         <input type="range" min="1" max="50" value="10" id="inputPasswordSize"/>
         <span id="inputPasswordSizeValue"></span>
     </div>
 
     <div class="row">
-        <input type="checkbox" id="numbers">
+        <input type="checkbox" name ="checkParameter" id="numbers">
         <label for="numbers">Incluir números</label>
     </div>
 
     <div class="row">
-        <input type="checkbox" id="specialCharacters">
+        <input type="checkbox" name ="checkParameter" id="specialCharacters">
         <label for="specialCharacters">Incluir caracteres especiais</label>
     </div>
 
     <div class="row">
-        <input type="checkbox" id="upperCaseLetters">
+        <input type="checkbox" name ="checkParameter" id="upperCaseLetters">
         <label for="upperCaseLetters">Incluir letras maiúsculas</label>
     </div>
 
     <div class="row">
-        <input type="checkbox" id="lowerCaseLetters">
+        <input type="checkbox" name ="checkParameter" id="lowerCaseLetters">
         <label for="lowerCaseLetters">Incluir letras minúsculas</label>
     </div>
     
